# MatOp

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/matop/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/matop/: MainActivity.kt
app/src/main/java/com/example/matop/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/matop/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
